--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "vercel-build": "echo 'Vercel build complete'"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^4.18.2",
+    "googleapis": "^159.0.0",
+    "pg": "^8.16.3",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
